Fix shutdown crashes by ensuring a valid MessageLoop.

The WindowServer crashes during shutdown when there are open handles
because ThreadTaskRunnerHandle will crash when there isn't a valid
MessageLoop. Don't manually destroy the MessageLoop.

BUG=689197

Review-Url: https://codereview.chromium.org/2683543003
Cr-Commit-Position: refs/heads/master@{#448742}

Former-commit-id: a6de7e04fc91c39ee5c85b4fa098ba2f8d26a9d7